Changes in version 0.6.2
------------------------

* Fix for thread leak in ConcurrentEvolutionEngine (ISSUE#16).  Added a
  finalizer to shutdown the thread pool in FitnessEvaluationWorker so that the
  active threads do not inhibit garbage collection.

* Made fitness evaluation threads daemons again (as in 0.6.0).  Only standalone
  (i.e. Terracotta) FitnessEvaluationWorkers now use non-daemon threads.  This
  fixes the problem of the JVM not exiting when the program is finished
  (ISSUE#17).

* Better thread naming for fitness evaluation worker threads.


Changes in version 0.6.1
------------------------

* Added getSatisfiedTerminationConditions() method to the EvolutionEngine
  interface.  This makes it easier to determine which TerminationCondition
  caused the evolution to stop (ISSUE#13).

* Improvements to the genetic programming example application.

* Made StatusBar component public so that it can be used independently of the
  Evolution Monitor.

* Converted applet-based examples so that they can also run as applications in
  JFrames.

* Introduced Launcher class so that examples can be run easily from the command
  line.

* Changed the Mona Lisa example to accept the URL of an alternate image when
  run from the command line.

* Moved NullFitnessEvaluator from interactive package to framework package and
  made it package scope.  This class is an implementation detail and should not
  be exposed by the API.

* Refactored the ConcurrentEvolutionEngine by moving the code that actually
  executes FitnessEvaluationTasks into a new class (FitnessEvaluationWorker).
  This modified design makes it easy to distribute the fitness evaluations
  using Terracotta (http://www.terracotta.org).

* Documented the restriction that fitness scores are not allowed to be
  negative.  Made sure that the framework throws an appropriate, informative
  exception if a negative fitness is encountered (ISSUE#15).
